--- a/templates/index.html
+++ b/templates/index.html
@@ -14,188 +14,188 @@
     <style> 
         .carousel-inner {
             max-height: 500px;
+                }
+        li {
+          font-weight: 200;
         }
-li {
-  font-weight: 200;
-}
-.footer {
-    display:flexbox;
-    width: 100%;
-    position: relative;
-    background: #3b3939;
-    padding: 35px 25px 50px 25px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    height: 180px
-}
-.footer-start {
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 50px;
-    width: 90%;
-    margin: auto;
-    padding: 80px 100px;
-    background: #3d7c13;
-    border-radius: 15px;
-}
-.start-learning {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: -150px;
-}
-.footer .inner {
-    display: flex;
-    align-items: self-start;
-    justify-content: space-between;
-    column-gap: 20px;
-    row-gap: 20px;
-    max-width: 1180px;
-    margin: auto;
-    text-align: left;
-}
-.main-logo {
-    position: relative;
-    display: flex;
-    align-items: center;
-}
-.main-logo .logo {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-}
-.main-logo .logo > img {
-    display: block;
-    width: 100%;
-    min-width: 40px;
-}
-.logo-info {
-    text-align: left;
-    line-height: 20px;
-}
-.text {
-    font-size: 17px;
-    line-height: 17px;
-    color: #fff;
-    letter-spacing: .18em;
-    font-weight: 600;
-}
-.copyright {
-    color: #fff;
-    font-size: 12px;
-    line-height: 12px;
-}
-.footer .column {
-    width: 100%;
-    font-size: 14px;
-    text-align: left;
-}
-.footer .column .column-title {
-    font-weight: 700;
-    font-size: 16px;
-    margin-bottom: 0.5em;
-    color: #fff;
-    text-align: left;
-    margin-left: 0.7cm;
-    
-}
-.footer .column .column-title {
-    margin-top: 0em;
-}
-.illustration {
-    left: 8%;
-    position: absolute;
-    top: -28px;
-}
-a.button {
-    display: inline-flex;
-    position: relative;
-    height: 60px;
-    margin-right: 20px;
-    flex-direction: row;
-    align-items: center;
-    overflow: hidden;
-    background: #fff;
-    color: #92761b;
-    border-radius: 36px;
-    font-size: 16px;
-    font-weight: 700;
-    padding: 0 30px;
-    text-decoration: unset;
-    box-shadow: 0px 24px 74px rgba(171, 166, 180, 0.2);
-}
-.section-title {
-    font-size: 44px;
-    font-weight: 700;
-    color: #fff;
-}
-.section-sub-heading {
-    font-size: 22px;
-    font-weight: 400;
-    color: #fff;
-}
-.section-sub-heading span {
-    opacity: 0.6;
-}
-.section-sub-heading strong {
-    font-weight: 600;
-}
+        .footer {
+            display:flexbox;
+            width: 100%;
+            position: relative;
+            background: #3b3939;
+            padding: 35px 25px 50px 25px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            height: 180px
+        }
+        .footer-start {
+            display: flex;
+            position: relative;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 50px;
+            width: 90%;
+            margin: auto;
+            padding: 80px 100px;
+            background: #3d7c13;
+            border-radius: 15px;
+        }
+        .start-learning {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: -150px;
+        }
+        .footer .inner {
+            display: flex;
+            align-items: self-start;
+            justify-content: space-between;
+            column-gap: 20px;
+            row-gap: 20px;
+            max-width: 1180px;
+            margin: auto;
+            text-align: left;
+        }
+        .main-logo {
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+        .main-logo .logo {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            margin-right: 10px;
+        }
+        .main-logo .logo > img {
+            display: block;
+            width: 100%;
+            min-width: 40px;
+        }
+        .logo-info {
+            text-align: left;
+            line-height: 20px;
+        }
+        .text {
+            font-size: 17px;
+            line-height: 17px;
+            color: #fff;
+            letter-spacing: .18em;
+            font-weight: 600;
+        }
+        .copyright {
+            color: #fff;
+            font-size: 12px;
+            line-height: 12px;
+        }
+        .footer .column {
+            width: 100%;
+            font-size: 14px;
+            text-align: left;
+        }
+        .footer .column .column-title {
+            font-weight: 700;
+            font-size: 16px;
+            margin-bottom: 0.5em;
+            color: #fff;
+            text-align: left;
+            margin-left: 0.7cm;
+            
+        }
+        .footer .column .column-title {
+            margin-top: 0em;
+        }
+        .illustration {
+            left: 8%;
+            position: absolute;
+            top: -28px;
+        }
+        a.button {
+            display: inline-flex;
+            position: relative;
+            height: 60px;
+            margin-right: 20px;
+            flex-direction: row;
+            align-items: center;
+            overflow: hidden;
+            background: #fff;
+            color: #92761b;
+            border-radius: 36px;
+            font-size: 16px;
+            font-weight: 700;
+            padding: 0 30px;
+            text-decoration: unset;
+            box-shadow: 0px 24px 74px rgba(171, 166, 180, 0.2);
+        }
+        .section-title {
+            font-size: 44px;
+            font-weight: 700;
+            color: #fff;
+        }
+        .section-sub-heading {
+            font-size: 22px;
+            font-weight: 400;
+            color: #fff;
+        }
+        .section-sub-heading span {
+            opacity: 0.6;
+        }
+        .section-sub-heading strong {
+            font-weight: 600;
+        }
 
-li {
-  
+        li {
+          
 
-}
+        }
 
 
 
-@media only screen and (max-width: 990px) and (min-width: 200px) {
-    body {
-        height: 200vh;
-        overflow-y: scroll;
-        overflow-x: hidden;
-    }
+        @media only screen and (max-width: 990px) and (min-width: 200px) {
+            body {
+                height: 200vh;
+                overflow-y: scroll;
+                overflow-x: hidden;
+            }
 
-    .footer .inner {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
-    .start-learning {
-        position: unset;
-    }
-    .footer-start {
-        width: 100%;
-        display: block;
-        padding: 30px 20px;
-        margin: 30px 0;
-    }
-    .section-title {
-        font-size: 30px;
-    }
-    .section-sub-heading {
-        font-size: 18px;
-    }
-    footer.footer {
-        padding-top: 0;
-    }
-    a.button {
-        height: 50px;
-        margin-top: 10px;
-    }
-    .column.is-logo {
-        order: 4;
-    }
-}
+            .footer .inner {
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            }
+            .start-learning {
+                position: unset;
+            }
+            .footer-start {
+                width: 100%;
+                display: block;
+                padding: 30px 20px;
+                margin: 30px 0;
+            }
+            .section-title {
+                font-size: 30px;
+            }
+            .section-sub-heading {
+                font-size: 18px;
+            }
+            footer.footer {
+                padding-top: 0;
+            }
+            a.button {
+                height: 50px;
+                margin-top: 10px;
+            }
+            .column.is-logo {
+                order: 4;
+            }
+        }
 
-.footer li {
-  color : white;
-  font-weight: bold;
-}
-.footer .inner .column is-nav .column-title .tiny_list{
-      color: yellow;
-    }
+        .footer li {
+          color : white;
+          font-weight: bold;
+        }
+        .footer .inner .column is-nav .column-title .tiny_list{
+              color: yellow;
+            }
     </style>
     
 </head>
@@ -307,8 +307,10 @@ li {
         </div>
     </class>
 
+    <div style="background-color:bisque; padding:150px;">
 
-    <img src="https://th.bing.com/th/id/OIP.U2uS8pcCl-25uOzfoWZtvgAAAA?pid=ImgDet&w=330&h=282&rs=1" alt="None" style="align-self: center;">
+    </div>
+    
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -317,11 +319,11 @@ li {
 
 {% endblock %}
     <!-- Footer starts here -->
-    <footer class="footer" >
+    <footer class="footer" style="color:white ">
       <div class="inner">
           <div class="column is-logo">
               <a href="#" class="main-logo">
-                  <div class="logo">
+                  <div class="logo" >
                       <img src="https://th.bing.com/th/id/R.c74b8e85a94ed3378cf264c978ca2fab?rik=haYzxDkeQeCHyw&pid=ImgRaw&r=0" alt="chitaduc">
                   </div>
                   <div class="logo-info">
@@ -333,9 +335,9 @@ li {
           <div class="column is-nav">
               <div class="column-title">Navigation</div>
               <ul>
-                  <li class = tiny_list><a href="/">Home</a></li>
-                  <li class = tiny_list><a href="/about_me">About me</a></li>
-                  <li class = tiny_list><a href="#">Contact me</a></li>
+                  <li class = tiny_list style="color:white "><a href="/">Home</a></li>
+                  <li class = tiny_list style="color:white "><a href="/about_me">About me</a></li>
+                  <li class = tiny_list style="color:white "><a href="#">Contact me</a></li>
               </ul>
           </div>
 
