--- a/templates/ML.html
+++ b/templates/ML.html
@@ -2,4 +2,10 @@
 {% block title %} Machine Learning Projects {% endblock%}
 {% block content %}
 <h1> This is webpage showing projects in machine learning i have done recently!</h1>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/watch?v=oTJ-oqwxdZY&ab_channel=ShawnMendesVEVO">
+</iframe>
+<iframe width="420" height="315" src="https://www.youtube.com/embed/eI4an8aSsgw">
+</iframe>
+
 {% endblock %}
